# python-client

./: .gitignore  LICENSE  README.md  pyproject.toml
client_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python-client/: __main__.py
